bugfix: fix the problem that the top menu bar is not responsive (#243)
* bugfix: change basicLayout transform to children

* bugfix: fix the problem that the top menu bar is not responsive

--- a/src/BasicLayout.less
+++ b/src/BasicLayout.less
@@ -27,8 +27,6 @@
   flex-direction: column;
   width: 100%;
   min-height: 100%;
-  transform: rotate(0);
-  transition: all 0.2s;
 
   &.@{basicLayout-prefix-cls}-fix-siderbar {
     > section.ant-layout {
@@ -60,6 +58,12 @@
     > .ant-layout {
       max-height: 100%;
     }
+  }
+
+  // children should support fixed
+  .@{basicLayout-prefix-cls}-is-children {
+    transform: rotate(0);
+    transition: all 0.2s;
   }
 
   .@{basicLayout-prefix-cls}-has-header {
